# lowpower_eink

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/lvgl/: CMakeLists.txt  lv_conf.h
components/lvgl/src/extra/themes/mono/: lv_theme_mono.c
components/u8g2/: CMakeLists.txt
components/u8g2/fonts/: montmedium_font_82x.c  myicon_font24.c  u8g2_fonts.c
main/: CMakeLists.txt  Kconfig.projbuild  esp_hid_device_main.c  web_ui_bottom.html  web_ui_top.html
main/battery/: battery.c  battery.h
main/eink/: esp_eink_panel_2in66bc.c  esp_eink_panel_2in66bc.h
main/epd/: disp_drv.c  disp_drv.h  epaper.h  epaper_spi.c  epd_2in66.c  epd_2in66.h  epd_lvgl_init.c  epd_lvgl_init.h  key_input_lvgl.c  key_input_lvgl.h  u8g2_d_epd2in66.c  u8g2_d_epd2in66.h
main/humiture/: aht20.c  aht20.h
main/key/: key.c  key.h
main/net_time/: net_time.c  net_time.h
main/sntp_time/: sntp_time.c  sntp_time.h
main/storage/: app_storage.c  app_storage.h
main/ui/: ui.c  ui.h  ui_helpers.c
main/ui/core/inc/: base.h
main/ui/core/src/: base.c
main/ui/fonts/: battery_font.c  my_font_scrum_16x.c  myicon_font24.c  ui_font_misans78.c  ui_font_misansmedi82.c  ui_font_montserral78.c
main/ui/images/: ui_img_png_battery0_png.c  ui_img_png_battery4_png.c  ui_img_png_charge_png.c  ui_img_png_humidity032_png.c  ui_img_png_humidity24_png.c  ui_img_png_temperature32_png.c  ui_img_png_wifi_png.c
main/ui/screen/: screen.c  screen.h
main/ui/screens/: ui_mainScreen.c
main/web_server/: dns_server.c  web_server.c  web_server.h
main/wificon/: wificon.c  wificon.h
